# cs3_spike_detection

./: .gitignore  README.md
ros2_ws/assets/: loop_closure_optimizer.csv  metadata.yaml  state_optimizer_odometry.csv
ros2_ws/src/log/: latest_list
ros2_ws/src/spike_detector/: package.xml  setup.cfg  setup.py
ros2_ws/src/spike_detector/config/: default_sensitivity_spike_params.yaml  high_sensitivity_spike_params.yaml  low_sensitivity_spike_params.yaml  medium_sensitivity_spike_params.yaml
ros2_ws/src/spike_detector/launch/: spike_detector.launch.py  spike_detector_with_bag.launch.py
ros2_ws/src/spike_detector/spike_detector/: spike_analyzer.py  spike_detector_node.py
ros2_ws/src/spike_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/spike_msgs/msg/: Spike.msg
